# rust_web_modules

./: .env  .gitignore  Cargo.toml  README.md  README_en.md  常用命令
framework_base_web/: Cargo.toml
framework_base_web/src/: base_service.rs  lib.rs  pro_local_cache_util.rs
framework_base_web/src/config/: idempotent_interceptor.rs  init_config.rs  layer_util.rs  login_authorization.rs  mod.rs  req_record_util.rs
framework_base_web/src/dto/: element_data_dto.rs  log_dto.rs  login_info_dto.rs  mod.rs  paged_result.rs  query_page_dto.rs  request_record_dto.rs  sys_dict.rs
framework_base_web/src/job/: log_job.rs  mod.rs  snowflake_job.rs
framework_base_web/src/utils/: exp_util.rs  mod.rs  pro_base_security_util.rs  pro_decimal_util.rs  pro_snowflake_util.rs  pro_sql_query_util.rs  pro_sys_dict_util.rs
framework_macro/: Cargo.toml
framework_macro/src/: attr_util.rs  control.rs  job.rs  job_handle.rs  lib.rs  macro_demo.rs  macro_str_util.rs  pro_file_util.rs  pro_json_ser_der.rs  redis_mq.rs  redis_mq_que_model.rs  table.rs  table_handle.rs  ws.rs
framework_macro/src/dto/: mod.rs  table_dto_to_sql.rs
framework_macro/src/redis/: redis.rs
framework_macro/src/utils/: mod.rs  table_dto_to_sql_util.rs
framework_redis/: Cargo.toml
framework_redis/src/: lib.rs
framework_redis/src/utils/: mod.rs  pro_redis_lock_util.rs  pro_redis_mq_msg_util.rs  pro_redis_util.rs
framework_utils/: Cargo.toml
framework_utils/src/: exception_enum.rs  futures_util.rs  lang_util.rs  lib.rs  once_get.rs  pro_aes_gcm_util.rs  pro_base64_util.rs  pro_bcrypt_util.rs  pro_bean_util.rs  pro_collection_util.rs  pro_constant_pool_util.rs  pro_file_util.rs  pro_hex_util.rs  pro_http_util.rs  pro_job_util.rs  pro_json_util.rs  pro_map_util.rs  pro_md5_util.rs  pro_minithread_util.rs  pro_rsa_util.rs  pro_snowflake_util.rs  pro_sqlite_util.rs  pro_str_util.rs  pro_thread_util.rs  pro_time_util.rs
framework_utils/src/json/: mod.rs  serde_customize.rs
module_test_sys/: Cargo.toml
module_test_sys/src/: main.rs
module_test_sys/src/control/: mod.rs  test_control.rs
module_test_sys/src/entities/: test.rs
module_test_sys/src/job/: mod.rs  test_job.rs
module_test_sys/src/mq/: mod.rs  test_mq.rs
static/: index.html  script.js  styles.css
