[package]
name = "framework_base_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
framework_utils = { path = "../framework_utils" }
framework_redis = { path = "../framework_redis" }

lazy_static="1.4.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.42.0", features = ["full"] }

axum = {version="0.7.9", features=["multipart"]}
tower = "0.5.1"
tower-http = { version = "=0.6.1", features = ["cors","fs"] }

sqlx = { version = "0.7.4", features = [ "mysql" ,"runtime-tokio-native-tls", "time", "chrono","bigdecimal" ] }
chrono = { version = "0.4.38", features = ["serde"] }

framework_macro = { path = "../framework_macro" }

# 读取配置文件
dotenv = "0.15.0"
env_logger = "0.11.3"

jsonmap = "0.1.3"
once_cell = "1.19.0"

# 用于给枚举实现to_string 和 iter 方法
strum = "0.26"
strum_macros = "0.26"

redis = { version = "0.27.6", features = ["r2d2"] }
r2d2 = "0.8.10"