[package]
name = "framework_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.87"
quote = "1.0.36"
syn = "2.0.67"

lazy_static="1.4.0"

regex = "1.10.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"